Fixed text was not centered in payment history table

--- a/apps/lilium/less/payments.less
+++ b/apps/lilium/less/payments.less
@@ -263,7 +263,7 @@ table.articles-summary {
     .invoice {
         display: flex;
         justify-content: space-between;
-        align-content: center;
+        align-items: center;
         margin: 3px 12px;
 
         & > * {
@@ -277,12 +277,13 @@ table.articles-summary {
 
         .invoice-contractor {
             display: flex;
-            align-content: center;
+            align-items: center;
 
             img {
                 height: 40px;
                 width: auto;
                 border-radius: 50%;
+                padding: 0px 6px;
             }
         }
 
